# apifaker

./: README.md  pyproject.toml  reqs.txt  test_api.py
apifake/: main.py
